Through first paragraph of IV A.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -184,7 +184,7 @@ Isolated binaries that form binary black holes must go through the high-mass X-r
 
 \section{Formation scenarios}\label{form}
 
-When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star (\ilya{because there was observational evidence for merging double neutron stars in the Galaxy starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}, but no direct evidence for merging binary black holes}), and even more surprised by the high black hole masses (in excess of the observed black hole masses in X-ray binaries). Was this surprise justified? And should we be \ilya{perplexed by} the spin or mass ratio measurements for the \ilya{gravitational-wave} sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather \ilya{startling} that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we \ilya{discuss} the ways in which gravitational-wave observations might be used to distinguish them.
+When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star (\ilya{because there was observational evidence for merging double neutron stars in the Galaxy starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}, but no direct evidence for merging binary black holes}), and even more surprised by the high black hole masses (in excess of the observed black hole masses in X-ray binaries). Was this surprise justified? And should we be \ilya{perplexed by} the spin or mass ratio measurements for the \ilya{gravitational-wave} sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational-wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather \ilya{startling} that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we \ilya{discuss} the ways in which gravitational-wave observations might be used to distinguish them.
 
 
 \subsection{The Separation Question}
@@ -263,7 +263,7 @@ The last possibility we will describe is that the merging black holes may not ha
 \begin{itemize}
 \item{a.} Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item{b.} As the most massive objects in the cluster, they naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
-\item{c,d.}Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with  slightly higher velocities than they arrived with, each time removing energy from the binary.   
+\item{c,d.} Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with  slightly higher velocities than they arrived with, each time removing energy from the binary.   
 \item{e.} If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{itemize}
 
@@ -274,16 +274,15 @@ Dynamical formation and isolated binary evolution mechanisms are of course not m
 
 \section{Expected properties of merging systems}\label{merge}
 
-In this section we describe the expected hallmarks of each formation scenario in the properties of observed binary black hole mergers. These properties include black hole masses, mass ratios, and spins, orbital eccentricities, formation environments, and merger rates.
+In this section we describe the expected hallmarks of each formation scenario in the properties of observed binary black hole mergers. These properties include \ilya{merger rates}, black hole masses, mass ratios, spins, orbital eccentricities, and formation environments.
 
-Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the next section for a discussion of the current state of these efforts. However, our current understanding of the expected merger rates and properties of binary black holes rests largely on modelling. 
+Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational-wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the \ilya{following} section for a discussion of the current state of these efforts. \ilya{In the meantime, our} understanding of the expected merger rates and properties of binary black holes rests largely on \ilya{theoretical} modelling. 
 
-For the isolated binary evolution channel (\autoref{form}) this modeling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. \ajf{This next sentence is a bit confusing here: move or remove? Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.}   The merger rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}.
-
+For the isolated binary evolution channel (\autoref{form}) this modeling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. \ilya{Population synthesis techniques can be applied either to initial binaries at formation, or} to specific observed systems \ilya{at intermediate evolutionary stages}, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}.  Dynamical formation models are typically based on either computationally expensive N-body cluster models with direct integration of the equations of motion for each object, or a less computationally costly Monte Carlo approach in which the evolution of the distribution of the cluster component properties in phase space is coupled with stochastically sampled interactions modeled via few body body dynamics, or semi-analytical prescriptions that attempt to emulate these methods at a fraction of the computational cost. 
 
 \subsection{Merger rates}
 
- Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates for each of the three candidate formation channels. The value of the back-of-the-envelope merger rate analysis below is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}). \ajf{But would be nice to say something in this section about how these derived merger rates compare to observations -- do all three channels produce rates to OOM similar to the observed rate?}
+Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates for each of the three candidate formation channels. The value of the back-of-the-envelope merger rate analysis below is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  \ilya{That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary); dynamical formation rates may tend toward the lower end of this range \citep{Rodriguez:2016}; and chemically homogeneous evolution could yield tens of mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.}
 
 \subsubsection{Isolated binary evolution channel}
 \ajf{Need to do the same thing, at least briefly, for the other 2 channels.}
@@ -366,7 +365,7 @@ The above considerations place constraints on the formation time of the systems 
 
 \ajf{Might be worth reiterating at the start of this section that little can be said conclusively using the observations to date -- and then the next sentence about expected detection rates is more impactful -- we will know soon!}
 
-Observed rates of binary black hole mergers indicate merger rates of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred \ajf{hundreds or a hundred?} within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to use gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  
+Observed rates of binary black hole mergers indicate merger rates of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred\ilya{s} within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to use gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  
 
 \ajf{In this section we... describe some individually informative events and discuss some theoretical modeling techniques that will help to extract useful info from the observed data as the dataset grows in size... or something.}
 
