Done through IV.A.1

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -190,9 +190,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \subsection{The Separation Question}
 
 
-\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two thirty-solar mass black holes responsible for GW150914, the initial separation must have been less than 50 solar radii -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
+\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two thirty \ilya{$M_\odot$} black holes responsible for GW150914, the initial separation must have been less than \ilya{$\sim 50 R_\odot$} -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
 
-\textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach \ilya{roughly} an astronomical unit in size during its giant phase; the stars (above 20 solar masses at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
+\textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach \ilya{roughly} an astronomical unit in size during its giant phase; the stars (above \ilya{$\sim 20 M_\odot$}  at birth) that leave behind black holes may reach thousands of solar radii \ilya{$R_\odot$} at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
 
 \ilya{\textbf{The problem is already there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernova, even initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black 'Roche lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This is smaller than the zero-age main sequence radius, so the problem is there even without accounting for stellar radial expansion or binary widening through mass loss, which would exacerbate the problem.}
 
@@ -284,19 +284,18 @@ For the isolated binary evolution channel (\autoref{form}) this modeling typical
 
 Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates for each of the three candidate formation channels. The value of the back-of-the-envelope merger rate analysis below is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  \ilya{That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary); dynamical formation rates may tend toward the lower end of this range \citep{Rodriguez:2016}; and chemically homogeneous evolution could yield tens of mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.}
 
-\subsubsection{Isolated binary evolution channel}
-\ajf{Need to do the same thing, at least briefly, for the other 2 channels.}
+\subsubsection{Binary evolution via a common envelope}
 
-In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that a stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
+In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right \ilya{component} masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that \ilya{an isolated} stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
 
 \begin{enumerate}
-	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around 20 solar masses, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, assuming that the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, typically half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
+	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around \ilya{$20 M_\odot$}, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, \ilya{since} the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, \ilya{roughly} half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
 
 \item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be case B mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
 
 \item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
 
-\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, it is easier \ajf{is there a better word to use than easier here?} to initiate a common envelope if the mass ratio of the donor to the accretor is greater, and when the donor begins mass transfer earlier in its post-main-sequence evolution.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which is probably close to the threshold for initiating a common envelope phase.  At the same time, while an early onset of mass transfer means that the less evolved donor does not shrink as much in response to mass transfer (making mass transfer stable), it cannot have an envelope that is too tightly bound, otherwise the orbital energy is insufficient to eject it.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
+\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, \ilya{dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor}.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which \ilya{may be} close to the threshold for initiating a common envelope phase.  \ilya{The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks in response to mass loss and the envelope binding energy.}  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
 
 \item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
 \end{enumerate}
@@ -306,9 +305,13 @@ Thus, our Drake equation is as follows:
 f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\textrm{init sep} \times f_\textrm{survive SN1} \times f_\textrm{CE} \times f_\textrm{survive SN2} \times f_\textrm{merge} \nonumber \\
  & \sim & 0.001 \times 0.5 \times 0.5 \times 1 \times 0.1 \times 1 \times 0.4 = 5 \times 10^{-6}.
 \end{eqnarray}
-Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are similarly rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than the heavier stars necessary to form black holes, neutron star natal kicks and mass loss during supernovae are more likely to disrupt binaries; the expected yields are comparable.]
+Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are similarly rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than the heavier stars necessary to form black holes, neutron star natal kicks and mass loss during supernovae are more likely to disrupt binaries; the expected yields are \ilya{within an order of magnitude}.]
 
-The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care to account for the time-varying star formation history convolved with the time delay distribution.  \ajf{We've moved from describing e.g. solar radii in words to using the symbols for everything... need to make consistent.}
+The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care \ilya{than the back-of-the-envelope model presented here, including accounting} for the \ilya{redshift-dependent metallicity-specific} star formation history convolved with the time delay distribution.  
+
+\subsubsection{Chemically homogeneous evolution}
+
+\subsubsection{Dynamical formation}
 
 \subsection{System Properties}
 \subsubsection{Masses}
