--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -311,7 +311,20 @@ The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ 
 
 \subsubsection{Chemically homogeneous evolution}
 
+\ilya{We can write a similar Drake's equation for chemically homogeneous evolution.  Following \citet{MandeldeMink:2016},  the yield fraction is} 
+\begin{eqnarray}
+f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\textrm{init sep} \times f_Z \times f_\textrm{merge} \nonumber \\
+ & \sim & 0.0002 \times 0.5 \times 0.1 \times 0.1 \times 1 = 10^{-6}.
+\end{eqnarray}
+
+\ilya{Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the previous paragraph because only the most massive stars with initial masses above $\sim 50 M_\odot$ are likely to have the necessary level mixing to undergo chemically homogeneous evolution and $f_\textrm{secondary} \approx 0.5$ as above.  In order to engage in efficient mixing, the components must be close enough to be tidally locked and rotating at a significant fraction of the break-up velocity, yet avoid merger; this defines a range of initial separations spanning roughly a factor of 2 out of a total range of binary separations spanning $\approx 5$ orders of magnitude, so $f_\textrm{init sep} \approx 0.1$.  Finally, $f_Z \approx 0.1$ is the total historical fraction of low-metallicity star formation, required to suppress line-driven winds which widen the binary, spin down the stars, and suppress mixing.  Because these binaries are constructed to be very tight at birth, the vast majority should merge after the stars collapse into black holes in situ, and $f_\textrm{merge} \approx 0.1$. Thus, if this channel is viable, the rate of binary black hole mergers produced through the chemically homogeneous evolution channel could reach perhaps $\sim 20$ Gpc$^{-3}$ yr$^{-1}$, but with a preference for much higher masses than classical isolated binary evolution rate, as discussed below.}
+
+
 \subsubsection{Dynamical formation}
+
+\ilya{We can estimate an upper limit on the merger rate of dynamically formed binary black holes by assuming that all black holes in a globular cluster undergo a single merger.  About 1 in a thousand stars are massive enough to become a black hole, so even a relatively large cluster with $2\times 10^6$ stars would produce only 2000 black holes and 1000 mergers.  [Although repeated mergers are possible if the black hole merger product is retained in the cluster and merges again, they are very rare as gravitational-wave recoil kicks are overwhelmingly likely to eject a merger remnant from the cluster \citep{Rodriguez:2018}; in any case, even merging all black holes sequentially would increase this estimate by at most a factor of 2.]  If we imagine that the merger rate is uniform over the $\sim 10$ Gyr--long history of the Universe (if mergers predominantly happened early in the cluster history, the rate in the local Universe would be lower), and with a globular cluster space density of around 1 per Mpc$3$, the upper limit on the merger rate from this channel is $\sim 1000 \times 10^{-10} \textrm{yr}^{-1} \times 1 \textrm{Mpc}^{-3} \approx 100$ Gpc$^{-3}$ yr$^{-1}$.}
+
+\ilya{Young massive star clusters could further contribute to this rate \citep[e.g.,][]{Ziosi:2014}, as could galactic nuclear clusters \citep[e.g.,][]{MillerLauburg:2008,Bartos:2016,Stone:2016}.  On the other hand, in practice, the rate is likely to be at least a factor of a few lower for the following reasons.  Firstly, some single black holes will be ejected from the cluster during three-body interactions which harden the binaries.  If the masses of all interacting objects are similar, the ejected object gets a kick that is comparable to the orbital velocity of the binary.  The last scattering interactions must harden the binary to a sufficiently small separation for gravitational-wave emission to take over; this scales with the binary's mass as $a \propto M^{3/4}$ (see \autoref{fig:periapsis} and \citet{Peters:1964}), so the minimal orbital velocity of a binary that can merge in the age of Universe through gravitational-wave emission is $\gtrsim 100$ km s$^{-1}$ and only weakly depends on mass.   This is larger than the typical globular cluster escape velocity, $\lesssim 50$ km s$^{-1}$, so many interlopers, including some black holes, will be ejected.  Secondly, following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star to conserve momentum; although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass, typically greater than $2:1$ as the lightest body is ejected, the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone. Finally, if most mergers happen soon after globular cluster formation, the local merger rate would be low as the majority of globular clusters are old \citep{Rodriguez:2016big}.}
 
 \subsection{System Properties}
 \subsubsection{Masses}
