--- a/Mandel.bib
+++ b/Mandel.bib
@@ -19145,20 +19145,26 @@ archivePrefix = "arXiv",
    author = {{Cantiello}, M. and {Jensen}, J.~B. and {Blakeslee}, J.~P. and 
 	{Berger}, E. and {Levan}, A.~J. and {Tanvir}, N.~R. and {Raimondo}, G. and 
 	{Brocato}, E. and {Alexander}, K.~D. and {Blanchard}, P.~K. and 
-	{Cano}, Z. and {Chornock}, R. and {Covino}, S. and {Cowperthwaite}, P.~S. and 
-	{D'Avanzo}, P. and {Eftekhari}, T. and {Fong}, W. and {Fruchter}, A.~S. and 
-	{Hjorth}, J. and {Lyman}, J.~D. and {Mandel}, I. and {Margutti}, R. and 
+	{Branchesi}, M. and {Cano}, Z. and {Chornock}, R. and {Covino}, S. and 
+	{Cowperthwaite}, P.~S. and {D{\rsquo}Avanzo}, P. and {Eftekhari}, T. and 
+	{Fong}, W. and {Fruchter}, A.~S. and {Grado}, A. and {Hjorth}, J. and 
+	{Holz}, D.~E. and {Lyman}, J.~D. and {Mandel}, I. and {Margutti}, R. and 
 	{Nicholl}, M. and {Villar}, V.~A. and {Williams}, P.~K.~G.},
     title = "{A Precise Distance to the Host Galaxy of the Binary Neutron Star Merger GW170817 Using Surface Brightness Fluctuations}",
-  journal = {ArXiv e-prints},
+  journal = {\apjl},
 archivePrefix = "arXiv",
    eprint = {1801.06080},
- keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ keywords = {galaxies: distances and redshifts, galaxies: fundamental parameters, galaxies: individual: NGC 4993 },
      year = 2018,
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180106080C},
+    month = feb,
+   volume = 854,
+      eid = {L31},
+    pages = {L31},
+      doi = {10.3847/2041-8213/aaad64},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ApJ...854L..31C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Knigge:2011,
    author = {{Knigge}, C. and {Coe}, M.~J. and {Podsiadlowski}, P.},
@@ -19907,11 +19913,22 @@ archivePrefix = "arXiv",
 }
 
 @Misc{VignaGomez:2018,
-     author    = {{Vigna-G{\'o}mez}, A. and others},
-     title     = "Binary Compact Object Coalescence Rates: Nearby Universe",
-     year      = 2018,
-     note      = "In preparation"
+   author = {{Vigna-G{\'o}mez}, A. and {Neijssel}, C.~J. and {Stevenson}, S. and 
+	{Barrett}, J.~W. and {Belczynski}, K. and {Justham}, S. and 
+	{de Mink}, S.~E. and {M{\"u}ller}, B. and {Podsiadlowski}, P. and 
+	{Renzo}, M. and {Sz{\'e}csi}, D. and {Mandel}, I.},
+    title = "{On the formation history of Galactic double neutron stars}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1805.07974},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2018,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180507974V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @Misc{Neijssel:2018,
      author    = {{Neijssel}, C.~J. and others},
