--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -328,13 +328,13 @@ f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\text
 
 \subsection{System Properties}
 \subsubsection{Masses}
-Once formed by stellar collapse or supernova, the black holes in the binaries of interest will have roughly constant masses. The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
+Once formed by stellar collapse or supernova \ilya{explosions}, the black holes in binaries of interest will have roughly constant masses. The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit would take more than 100 million years\ilya{, and} the massive companion will only survive for a small fraction of that time. After the second compact object \ilya{is formed}, there is very little \ilya{or no} further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
 
 The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
 
  Dynamical formation in globular clusters can also lead to a range of masses, but may favor more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  \citet{Chatterjee:2017} argue that dynamical formation could explain all black hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black hole binaries and younger, metal-rich clusters contributing lighter binaries.
  
-  Chemically homogeneous evolution is only possible in \ajf{can only produce?} more massive binaries, with total \ajf{black hole?} mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
+  Chemically homogeneous evolution \ilya{can only produce massive} binaries, with total black hole mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
 
 \subsubsection{Mass Ratios}
 The mass ratios of merging black hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
