--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20208,4 +20208,36 @@ booktitle = {Structure and Evolution of Close Binary Systems},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Batta:2017,
+   author = {{Batta}, A. and {Ramirez-Ruiz}, E. and {Fryer}, C.},
+    title = "{The Formation of Rapidly Rotating Black Holes in High-mass X-Ray Binaries}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1708.00570},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: close, supernovae: general},
+     year = 2017,
+    month = sep,
+   volume = 846,
+      eid = {L15},
+    pages = {L15},
+      doi = {10.3847/2041-8213/aa8506},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...846L..15B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schroeder:2018,
+   author = {{Schr{\o}der}, S.~L. and {Batta}, A. and {Ramirez-Ruiz}, E.},
+    title = "{Black Hole Formation in Fallback Supernova and the Spins of LIGO Sources}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1805.01269},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2018,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180501269S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
