--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -284,7 +284,7 @@ For the isolated binary evolution channel (\autoref{form}) this modeling typical
 
 Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates for each of the three candidate formation channels. The value of the back-of-the-envelope merger rate analysis below is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  \ilya{That said, the merger rate predictions for isolated binary evolution via the common envelope phase are consistent with the observed rate of binary black hole mergers of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104} (see \citet{ratesdoc} for a slightly dated summary); dynamical formation rates may tend toward the lower end of this range \citep{Rodriguez:2016}; and chemically homogeneous evolution could yield tens of mergers per Gpc$^{3}$ per yr$^{-1}$ in the local Universe \citep{MandeldeMink:2016,Marchant:2016}.}
 
-\subsubsection{Binary evolution via a common envelope}
+\subsubsection{Binary evolution via a common envelope}\label{sec:CErates}
 
 In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right \ilya{component} masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that \ilya{an isolated} stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
 
@@ -339,28 +339,28 @@ The classical isolated binary evolution channel discussed in detail above can pr
 \subsubsection{Mass Ratios}
 The mass ratios of merging black hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
 
-Dynamically formed binaries may also favor comparable masses because the heaviest black holes are most likely to merge \ajf{say more here?}, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
+Dynamically formed binaries may also favor comparable masses because the heaviest black holes \ilya{in a cluster} are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \ajf{what does "contact phase" mean for this channel?} \citep{Marchant:2016}.  
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that \ilya{were in contact (shared mass) on the main sequence} \citep{Marchant:2016}.  
 
 \subsubsection{Black Hole Spin Magnitudes and Directions}
 The spins of merging black holes may carry imprints of their evolutionary history. 
 
- Isolated binaries (\ajf{and those formed by chemically homogeneous evolution?}) are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.
+Isolated binaries, \ilya{including} those formed \ilya{through} chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.
 
-Spin magnitudes may also depend sensitively on evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these \ajf{the observations, I assume?} may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
+Spin magnitudes may also depend sensitively on evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017} or during the supernova itself \citep{Batta:2017,Schroeder:2018}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these observations may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
 
 Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum: the so-called `effective spin', which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
 \subsubsection{Orbital Eccentricities}
-	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, both isolated binaries and those formed via the chemically homogeneous evolution channel are expected to merge on circular orbits. Dynamically formed systems may, however, retain significant eccentricities at merger if their orbits are very tight at formation. Dynamical formation of tight binaries may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
+	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, \ilya{isolated binaries} are expected to merge on circular orbits. Dynamically formed systems may, however, retain significant eccentricities at merger if their orbits are very tight at formation. Dynamical formation of tight binaries may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
 
 
 \subsubsection{Formation Environments}
 \label{environ}
 The evolutionary history of merging black holes is also dependent on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black hole mass.
 
-Black hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black hole remnant.
+Black hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the \ilya{amount of ejecta during the supernova}. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, \ilya{roughly} a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black hole remnant.
 
 The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
  
@@ -368,12 +368,12 @@ The intense radiation from massive stars -- whose luminosities may be a hundred 
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).\ajf{distinguish between NSs and BHs?}} 
+	\caption{\label{fig:BHremnant} Remnant compact object mass \ilya{from single stellar evolution} for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).\ajf{distinguish between NSs and BHs?}} 
 \end{figure}
 
-Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}. For the isolated binary channel, delayed stellar expansion \ajf{at lower metallicity?}, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
+Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
 
-The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. However, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay. \ajf{need to say why -- does this just come out of population synthesis? Is it an approx power law?} A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
+The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. \ilya{Meanwhile, population synthesis models of the classical formation channel indicate that}  the delay time between star formation and merger peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  \ilya{This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.}  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
 
   
 
